HelloUltraviolet/Fixtures/RejectedSource/DataTypes/TypeAliasCycle/Source/Main.uv
//! Rejected core type diagnostic specimen for recursive type aliases.

public type AliasCycleA = AliasCycleB
public type AliasCycleB = AliasCycleA
